# illusion-ban-machine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  apotheosis.cpp  apotheosis.hpp  build_and_run_server.sh  default-options.cmake  docker-compose.yml  errors.hpp  graph-getter.cpp  graph-getter.hpp  graph-handler.hpp  input-parcer.cpp  input-parcer.hpp  interpreter.cpp  interpreter.hpp  main.cpp  make_and_run.sh  test_main
.github/workflows/: ci.yml
.history/: .gitignore_20250322020037  .gitignore_20250322133953  .gitignore_20250322134511  .gitignore_20250322144022  .gitignore_20250322144731  input-parcer_20250322015216.cpp  main_20250330133514.cpp  main_20250330133622.cpp  main_20250330134417.cpp  main_20250330142853.cpp  test_main_20250322005940.cpp  test_main_20250322015453.cpp
.history/database/: database_20250330153758.hpp  database_20250330154547.hpp
.history/joern_parse/: input-parcer_20250322140549.cpp  input-parcer_20250322140601.hpp  input-parcer_20250322143058.hpp  input-parcer_20250322143101.cpp  input-parcer_20250322143248.cpp  input-parcer_20250322143652.cpp  input-parcer_20250322180326.cpp  input-parcer_20250322180421.cpp  input-parcer_20250330133744.cpp  input-parcer_20250330133809.cpp  input-parcer_20250330133947.cpp  input-parcer_20250330134432.cpp  input-parcer_20250330135335.cpp  input-parcer_20250330135450.cpp  input-parcer_20250330135459.cpp  input-parcer_20250330135745.cpp  input-parcer_20250330135840.cpp  input-parcer_20250330140154.cpp  input-parcer_20250330140403.cpp  input-parcer_20250330140640.cpp  input-parcer_20250330141416.cpp  input-parcer_20250330141508.cpp  input-parcer_20250330141632.cpp  input-parcer_20250330141642.cpp  input-parcer_20250330141752.cpp  input-parcer_20250330141805.cpp  input-parcer_20250330141852.cpp  test_main_20250322141948.cpp  test_main_20250322143108.cpp
.history/joern_parse/results/: git_stupid_20250322144433.txt
.history/joern_parse/test_files/: 1_20250330133230.cpp
.history/parse/results/: input-parcer_20250322021045.cpp
algorithm/: VF2.cpp  VF2.hpp  apotheosis.cpp  apotheosis.hpp  apotheosis_old.cpp  errors.hpp  graph-handler.cpp  graph-handler.hpp  interpreter.cpp  interpreter.hpp  main.cpp
configs/: config.yaml
database/: database.cpp  database.hpp  json_processor.cpp  json_processor.hpp
joern_parse/: input-parcer.cpp  input-parcer.hpp
joern_parse/test_files/: 0.cpp  1.cpp
joern_work_folder/buffer/: 0.cpp  1.cpp
joern_work_folder/results/: 0.dot  11.dot  4.dot  7.dot
joern_work_folder/results/0.cpp/: 0-pdg.dot  1-pdg.dot  10-pdg.dot  11-pdg.dot  12-pdg.dot  13-pdg.dot  14-pdg.dot  15-pdg.dot  16-pdg.dot  17-pdg.dot  18-pdg.dot  19-pdg.dot  2-pdg.dot  20-pdg.dot  21-pdg.dot  22-pdg.dot  23-pdg.dot  24-pdg.dot  25-pdg.dot  26-pdg.dot  27-pdg.dot  28-pdg.dot  29-pdg.dot  30-pdg.dot  31-pdg.dot  4-pdg.dot  5-pdg.dot  6-pdg.dot  7-pdg.dot  8-pdg.dot  9-pdg.dot  output.dot
joern_work_folder/results/1.cpp/: 0-pdg.dot  1-pdg.dot  10-pdg.dot  11-pdg.dot  12-pdg.dot  13-pdg.dot  14-pdg.dot  15-pdg.dot  16-pdg.dot  17-pdg.dot  18-pdg.dot  19-pdg.dot  2-pdg.dot  20-pdg.dot  21-pdg.dot  22-pdg.dot  23-pdg.dot  24-pdg.dot  25-pdg.dot  4-pdg.dot  5-pdg.dot  6-pdg.dot  7-pdg.dot  8-pdg.dot  9-pdg.dot  output.dot
joern_work_folder/test_files/: 0.cpp  1.cpp  10.cpp  11.cpp  12.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
joern_work_folder/test_results/: 1.dot  10.dot  12.dot  2.dot  3.dot  5.dot  6.dot  8.dot  9.dot  for_git.txt
scripts/: build_algorithm_debug.sh  build_algorithm_release.sh  build_and_run_server.sh  create_tables.sql  make_and_run.sh
server/cmake/: DownloadUserver.cmake  get_cpm.cmake
server/configs/: config.yaml  config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  static_config.yaml
server/src/: handlers.cpp  handlers.hpp  main.cpp  server.cpp  server.hpp  server_test.cpp
server/static/: index.html  load-code.html
server/tests/: conftest.py  test_basic.py
src/: server.hpp
test_files/: a.cpp
workspace/cpg.bin/: project.json
